Fix overflowing text with media queries

--- a/src/client/components/text-view/text-view.scss
+++ b/src/client/components/text-view/text-view.scss
@@ -39,3 +39,9 @@
     text-align: center;
     align-items: center;
 }
+
+@media (max-width: 300px) {
+    .text-view__placeholder {
+        font-size: 1.3rem;
+    }
+}
