--- a/src/client/components/uploader/uploader.scss
+++ b/src/client/components/uploader/uploader.scss
@@ -31,3 +31,9 @@
     opacity: 0.5;
     cursor: not-allowed;
 }
+
+@media (max-width: 300px) {
+    .uploader__dropzone {
+        font-size: 1.5rem;
+    }
+}
