--- a/src/client/containers/app/app.scss
+++ b/src/client/containers/app/app.scss
@@ -5,24 +5,23 @@
     height: 100%;
 
     display: grid;
-    justify-content: center;
 
     position: relative;
 }
 
 .app__inner {
+    width: 100%;
     display: grid;
     grid-template-rows: min-content 1fr min-content;
-    justify-content: center;
     overflow: hidden;
 }
 
 .app__card {
-    width: 100vw;
-    padding-top: 1vw;
-    padding-right: 5vw;
-    padding-bottom: 1vw;
-    padding-left: 5vw;
+    width: 100%;
+    padding-top: 8px;
+    padding-right: 24px;
+    padding-bottom: 8px;
+    padding-left: 24px;
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
@@ -33,7 +32,7 @@
 .app__card--dark-background {
     @extend .app__card;
     background-color: $grey3;
-    margin-bottom: 1vw;
+    margin-bottom: 8px;
 }
 
 .app__title {
@@ -41,4 +40,10 @@
     font-size: 1.7rem;
     font-weight: bold;
     text-align: center;
+}
+
+@media (max-width: 300px) {
+    .app__title {
+        font-size: 1.5rem;
+    }
 }
